--- a/write.ejs
+++ b/write.ejs
@@ -1,8 +1,3 @@
-<%
-    if (typeof(error) == "undefined") {
-        error = '';
-    }
-%>
 <!doctype html>
 <html>
     <head>
@@ -12,58 +7,110 @@
         <link rel="stylesheet" href="/css/bootstrap.min.css">
         <script>
             function setUpload() {
-                var message = document.form_textarea.message.value;
-                document.form_upload.h_message.value = message;
+                var text_message = document.form_textarea.text_message.value;
+                document.form_upload.h_message.value = text_message;
             }
             function setCancel() {
-                var message = document.form_textarea.message.value;
-                document.form_cancel.h_message.value = message;                               
+                var text_message = document.form_textarea.text_message.value;
+                document.form_cancel.h_message.value = text_message;                               
             }
     </script>
     </head>
     <body>
         <nav class="navbar bg-light">
             <a class="navbar-brand" href="/index/">Board</a>
+        <% if (login_user) { %>
+            <span class="navbar-text">
+                <%= login_user %>でログイン中
+            </span>
+        <% } %>
+            <ul class="nav">
+            <% if (login_user) { %>
+                <li class="nav-item">
+                    <a href="/token" class="nav-link">トークン発行</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/logout" class="nav-link">ログアウト</a>
+                </li>
+                <br>
+                <li class="nav-item">
+                    <a href="/write" class="nav-link">新規投稿</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/index/user" class="nav-link"><%=login_user%>でのみ投稿掲示</a>
+                </li>
+            <% } else { %>
+                <li class="nav-item">
+                    <a href="/login" class="nav-link">ログイン</a>
+                </li>
+            <% } %>
+            </ul>
         </nav>
         <div class="container">
             <p>
-                <%= error %>
+            <%- message %>
             </p>
         <div>
-            <% if (!image) { %>
-                <form action="/upload" method="POST" enctype="multipart/form-data" name="form_upload">
-                    <div class="form-group">
-                        <input type="file" name="file">
-                        <input type="hidden" name="h_message">
-                        <input type="submit" class="btn btn-primary" value="イメージ確認" onclick="setUpload();">
-                    </div>
-                </form>
+        <% if (!image) { %>
+            <% if (post_id) { %>
+            <form action="/upload/<%= post_id %>" method="POST" enctype="multipart/form-data" name="form_upload">
             <% } else { %>
-                <form action="/cancel" method="POST" name="form_cancel">
+            <form action="/upload/" method="POST" enctype="multipart/form-data" name="form_upload">
+            <% } %>
+                <div class="form-group">
+                    <input type="file" name="file">
+                    <input type="hidden" name="h_message">
+                    <input type="submit" class="btn btn-primary" value="イメージ確認" onclick="setUpload();">
+                </div>
+            </form>
+        <% } else { %>
+            <% if (post_id) { %>
+                <% if (no_img) { %>
+                <form action="/cancel/<%= post_id %>" method="POST" name="form_cancel">
                     <div class="form-group">
                         <input type="hidden" name="h_message">
                         <input type="submit" class="btn btn-primary" value="イメージ取消" onclick="setCancel();">
                     </div>
                 </form>
-            <% } %>
-            </div>
-            <div>
-                <form action="/insert" method="POST" name="form_textarea">
-                    <% if (image) { %>
-                        <div class="form-group">
-                            <img src="<%= image %>" name="image" width="200" height="200">
-                            <input type="hidden" name="h_img" value="<%= image %>">
-                        </div>
-                    <% } %>
-                    <div class="form-group">    
-                    <% if (message) { %>
-                        <textarea name="message" rows="5" class="form-control"><%= message %></textarea>
-                    <% } else { %>
-                        <textarea name="message" rows="5" class="form-control"></textarea>
-                    <% } %>
-                        <input type="submit" class="btn btn-primary" value="投稿">
+                <% } else { %> 
+                <form action="/cancel/<%= post_id %>" method="POST" name="form_cancel">
+                    <div class="form-group">
+                        <input type="hidden" name="h_message">
+                        <input type="submit" class="btn btn-primary" value="イメージ削除" onclick="setCancel();">
                     </div>
                 </form>
-            </div>
+                <% } %>
+            <% } else { %>
+            <form action="/cancel/" method="POST" name="form_cancel">
+                <div class="form-group">
+                    <input type="hidden" name="h_message">
+                    <input type="submit" class="btn btn-primary" value="イメージ取消" onclick="setCancel();">
+                </div>
+            </form>
+            <% } %>
+        <% } %>
+        </div>
+        <div>
+        <% if (post_id) { %>
+            <form action="/write/<%= post_id %>" method="POST" name="form_textarea">
+        <% } else { %>
+            <form action="/write/" method="POST" name="form_textarea">
+        <% } %>            
+            <% if (image) { %>
+                <div class="form-group">
+                    <img src="<%= image %>" name="image" width="200" height="200">
+                    <input type="hidden" name="h_img" value="<%= image %>">
+                </div>
+            <% } %>
+                <div class="form-group">    
+                <% if (text_message) { %>
+                    <textarea name="text_message" rows="5" class="form-control"><%= text_message %></textarea>
+                <% } else { %>
+                    <textarea name="text_message" rows="5" class="form-control"></textarea>
+                <% } %>
+                    <input type="submit" class="btn btn-primary" value="投稿">
+                </div>
+            </form>
+        </div>
     </body>
 </html>
